<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenNMS</string>
    <string name="app_name_full">OpenNMS Android Client</string>

    <!-- Nodes -->
    <string name="nodes">Nodes</string>
    <string name="nodes_list_empty">No nodes</string>
    <string name="node_details">Details about node #</string>
    <string name="node_details_id">ID</string>
    <string name="node_details_contact">System contact</string>
    <string name="node_details_creation_time">Creation time</string>
    <string name="node_details_label_source">Label source</string>
    <string name="node_details_description">Description</string>
    <string name="node_details_location">Location</string>
    <string name="node_details_type">Type</string>

    <!-- Outages -->
    <string name="outages">Outages</string>
    <string name="outages_list_empty">No outages</string>
    <string name="outage_details">Details about outage #</string>
    <string name="outage_details_id">Outage #</string>
    <string name="outage_details_service_id">Service ID</string>
    <string name="outage_details_service_type">Service type</string>
    <string name="outage_details_ip_address">IP address</string>
    <string name="outage_details_ip_interface_id">IP interface ID</string>
    <string name="outage_details_lost_event">Lost service event</string>
    <string name="outage_details_regained_event">Regained service event</string>

    <!-- Alarms -->
    <string name="alarms">Alarms</string>
    <string name="alarms_list_empty">No alarms</string>
    <string name="alarm_details">Details about alarm #</string>
    <string name="alarm_details_id">Alarm #</string>
    <string name="alarm_details_acked">Acknowledged</string>
    <string name="alarm_details_not_acked">Not acknowledged</string>
    <string name="alarm_details_acked_by">by</string>
    <string name="alarm_details_node">Node</string>
    <string name="alarm_details_service_type">Service type</string>
    <string name="alarm_details_last_event">Last event</string>
    <string name="alarm_details_desc">Description</string>
    <string name="alarm_details_message">Message</string>
    <string name="alarm_severity_critical">Critical</string>
    <string name="alarm_severity_major">Major</string>
    <string name="alarm_severity_minor">Minor</string>
    <string name="alarm_severity_warning">Warning</string>
    <string name="alarm_severity_indeterminate">Indeterminate</string>
    <string name="alarm_severity_normal">Normal</string>
    <string name="alarm_severity_cleared">Cleared</string>
    <string name="acknowledge">Acknowledge</string>

    <!-- Events -->
    <string name="events">Events</string>
    <string name="events_list_empty">No events</string>
    <string name="event_details">Details about event #</string>
    <string name="event_details_id">Event #</string>
    <string name="event_details_service_type">Service type</string>
    <string name="event_details_node">Node</string>
    <string name="event_details_log_message">Log message</string>
    <string name="event_details_desc">Description</string>
    <string name="event_details_host">Host</string>
    <string name="event_details_ip_address">IP address</string>
    <string name="event_details_create_time">Time</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_apply">Apply</string>
    <string name="settings_auth">Authentication</string>
    <string name="settings_user">User</string>
    <string name="settings_user_dialog_title">Set username</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_dialog_title">Set password</string>
    <string name="settings_server">Server</string>
    <string name="settings_host">Host</string>
    <string name="settings_host_dialog_title">Set host</string>
    <string name="settings_rest_url">REST URL</string>
    <string name="settings_rest_url_title">Set REST URL</string>
    <string name="settings_port">Port</string>
    <string name="settings_port_dialog_title">Set port number</string>
    <string name="settings_https">HTTPS</string>
    <string name="settings_https_on">Turned on</string>
    <string name="settings_https_off">Turned off</string>
    <string name="settings_alarm_notifications">Alarm notifications</string>
    <string name="settings_notifications_enabled">Notifications enabled</string>
    <string name="settings_notifications_enabled_true">Alarm notifications enabled</string>
    <string name="settings_notifications_enabled_false">Alarm notifications disabled</string>
    <string name="settings_wifi_only">Wi-Fi only synchronization</string>
    <string name="settings_minimal_severity">Minimal severity</string>
    <string name="settings_sync_rate">Synchronization rate</string>
    <string name="settings_sync_rate_dialog_title">Alarms synchronization rate (minutes)</string>
    <string name="settings_sync_rate_minutes_singular">minute</string>
    <string name="settings_sync_rate_minutes_plural">minutes</string>

    <!-- "Welcome" dialog -->
    <string name="welcome_message">Do you want to use demo server or change settings to use your server?</string>
    <string name="welcome_message_pos_button">Change settings</string>
    <string name="welcome_message_neg_button">Use demo server</string>

    <!-- Notifications -->
    <string name="new_alarms_notif_title">New alarms</string>
    <string name="new_alarms_notif_text_singular">There is a new alarm!</string>
    <string name="new_alarms_notif_text_plural">There are %d new alarms!</string>
    <string name="sync_failed_notif_title">Alarms sync failed</string>
    <string name="sync_failed_notif_text">Device is not connected to network.</string>
    <string name="sync_failed_notif_text_wifi">Device is not connected to Wi-Fi.</string>

    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>

    <string name="refresh">Refresh</string>
    <string name="refresh_failed_offline">Cannot refresh. Device is offline.</string>
    <string name="no_items">No items</string>
    <string name="no_details">Select item from the list\n to view details.</string>

    <string name="search">Search</string>

    <string name="about">About</string>
    <string name="about_info"><![CDATA[
        OpenNMS Copyright © 2002-2013 The OpenNMS Group, Inc.
        <br/>OpenNMS® is a registered trademark of The OpenNMS Group, Inc.
        <br/><br/><a href="http://www.opennms.org/">http://www.opennms.org/</a>
    ]]></string>
    <string name="version">Version:</string>
    <string name="unknown">Unknown</string>

    <string name="close_dialog">Close</string>

</resources>