<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_server">
        <EditTextPreference
            android:defaultValue="@string/default_host"
            android:dialogTitle="@string/settings_host_dialog_title"
            android:inputType="textUri"
            android:key="host"
            android:title="@string/settings_host" />
        <EditTextPreference
            android:defaultValue="@integer/default_port"
            android:dialogTitle="@string/settings_port_dialog_title"
            android:inputType="number"
            android:key="port"
            android:title="@string/settings_port" />
        <CheckBoxPreference
            android:defaultValue="@bool/default_https"
            android:key="https"
            android:title="@string/settings_https" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_auth">
        <EditTextPreference
            android:defaultValue="@string/default_user"
            android:dialogTitle="@string/settings_user_dialog_title"
            android:key="user"
            android:title="@string/settings_user" />
        <EditTextPreference
            android:defaultValue="@string/default_password"
            android:dialogTitle="@string/settings_password_dialog_title"
            android:inputType="textPassword"
            android:key="password"
            android:title="@string/settings_password" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_alarm_notifications">
        <CheckBoxPreference
            android:defaultValue="@bool/default_notifications"
            android:key="notifications_on"
            android:title="@string/settings_notifications_enabled" />
        <CheckBoxPreference
            android:defaultValue="@bool/wifi_only"
            android:key="wifi_only"
            android:title="@string/settings_wifi_only" />
        <ListPreference
            android:defaultValue="@string/default_minimal_severity"
            android:entries="@array/severity"
            android:entryValues="@array/severity_values"
            android:key="minimal_severity"
            android:title="@string/settings_minimal_severity" />
        <EditTextPreference
            android:defaultValue="@integer/default_refresh_rate"
            android:dialogTitle="@string/settings_refresh_rate_dialog_title"
            android:inputType="numberSigned"
            android:key="refresh_rate"
            android:title="@string/settings_refresh_rate" />
    </PreferenceCategory>

</PreferenceScreen>